# VoxelEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: block.h  camera.h  chunk.h  chunk_manager.h  consts.h  headers.h  light.h  linear_interpolator.h  material.h  noise_chunk.h  renderer.h  shader.h  sphere_chunk.h  texture_atlas.h  texture_manager.h  triangle.h  utils.h  window.h
shaders/: atlas.vs  block.fs  block.fs.old  block.vs  chunk.fs  chunk.vs  light.vs  triangle.vs
src/: block.cpp  camera.cpp  chunk.cpp  chunk_manager.cpp  light.cpp  linear_interpolator.cpp  main.cpp  material.cpp  noise_chunk.cpp  renderer.cpp  shader.cpp  sphere_chunk.cpp  texture_atlas.cpp  texture_manager.cpp  triangle.cpp  utils.cpp  window.cpp
